--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ nav {
     padding-top: 20px;
     justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 50px;;
 
 }
 .single-cover {
@@ -55,14 +56,10 @@ p {
 }
 @media screen and (max-width: 640px) {
     .row {
-        display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
         height: 100vh;
         width: 100vw;
         margin-top: 20vh;
-        margin-bottom: 50vh;
     }
     nav {
         position: sticky;
